// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconTile > size lg + tone amber 조합 클래스를 반영한다 1`] = `
<DocumentFragment>
  <span
    aria-hidden="true"
    class="inline-flex shrink-0 items-center justify-center transition-colors h-14 w-14 rounded-[14px] [&>svg]:h-[22px] [&>svg]:w-[22px] bg-amber-dim text-amber"
    data-slot="icon-tile"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-music"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 18V5l12-2v13"
      />
      <circle
        cx="6"
        cy="18"
        r="3"
      />
      <circle
        cx="18"
        cy="16"
        r="3"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`IconTile > 기본 렌더는 md/accent 변형을 반영한다 1`] = `
<DocumentFragment>
  <span
    aria-hidden="true"
    class="inline-flex shrink-0 items-center justify-center transition-colors h-10 w-10 rounded-md [&>svg]:h-[18px] [&>svg]:w-[18px] bg-accent-dim text-accent"
    data-slot="icon-tile"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-music"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 18V5l12-2v13"
      />
      <circle
        cx="6"
        cy="18"
        r="3"
      />
      <circle
        cx="18"
        cy="16"
        r="3"
      />
    </svg>
  </span>
</DocumentFragment>
`;
